JQuery UI 1.13, Guice update for JDK 17,move GPG to final step before deploy